...
                        .frame(maxWidth: .infinity)
                        .padding()
                        .background(isFavorite ? .red : .blue)
                        .foregroundStyle(.white)
                        .cornerRadius(10)
                }
                .accessibilityIdentifier(isFavorite ? "RemoveFromFavorites" : "AddToFavorites")
            }
            .padding()
        }
    }

    var isFavorite: Bool {
...
